добавила разметку мобильной версии

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -76,7 +76,7 @@
     <section class="production-video">
       <h2 class="production-video__title">Процесс производства</h2>
       <div class="production-video__wrapper">
-        <iframe class="production-video__iframe src="#" frameborder="0"></iframe>
+        <iframe class="production-video__iframe" src="#" frameborder="0"></iframe>
       </div>
       <p class="production-video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
       <button class="btn production-video__btn">Сделать заказ</button>
