внесла исправления в разметку

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,7 +13,7 @@
     </a>
     <nav class="main-nav">
       <div class="main-nav__wrapper">
-        <button class="main-nav__toggle" type="button">Меню</button>
+        <a class="main-nav__toggle" href="#">Меню</a>
         <ul class="main-nav__list">
           <li class="main-nav__item">
             <a class="main-nav__link">Главная</a>
@@ -42,7 +42,7 @@
           </a>
           <div class="catalog-item__footer">
             <span class="catalog-item__price">1 200 руб.</span>
-            <button class="card-btn"></button>
+            <a class="card-btn">Добавить в корзину</a>
           </div>
         </div>
       </section>
@@ -55,7 +55,7 @@
           </a>
           <div class="catalog-item__footer">
             <span class="catalog-item__price">690 руб.</span>
-            <button class="card-btn"></button>
+            <a class="card-btn">Добавить в корзину</a>
           </div>
         </div>
       </section>
@@ -68,7 +68,7 @@
           </a>
           <div class="catalog-item__footer">
             <span class="catalog-item__price">1 500 руб.</span>
-            <button class="card-btn"></button>
+            <a class="card-btn">Добавить в корзину</a>
           </div>
         </div>
       </section>
@@ -79,7 +79,7 @@
         <iframe class="production-video__iframe" src="#" frameborder="0"></iframe>
       </div>
       <p class="production-video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-      <button class="btn production-video__btn">Сделать заказ</button>
+      <a class="btn production-video__btn">Сделать заказ</a>
     </section>
   </div>
   <footer class="page-footer">
@@ -88,12 +88,12 @@
         <img src="https://via.placeholder.com/150x150" width="150" height="150" alt="Mishka">
       </a>
       <div class="social page-footer__social">
-        <a class="social-item social-item--inatagram" href="#"></a>
-        <a class="social-item social-item--facebook" href="#"></a>
-        <a class="social-item social-item--twitter" href="#"></a>
+        <a class="social-item social-item--inatagram" href="#">инстаграм</a>
+        <a class="social-item social-item--facebook" href="#">фейсбук</a>
+        <a class="social-item social-item--twitter" href="#">твиттер</a>
       </div>
       <a class="copyright" href="">Разработано
-        <svg class="html-academy-ico"></svg>
+        <svg class="html-academy-ico">Htmlacademy</svg>
       </a>
     </div>
   </footer>
