--- a/source/form.html
+++ b/source/form.html
@@ -13,7 +13,7 @@
     </a>
     <nav class="main-nav">
       <div class="main-nav__wrapper">
-        <button class="main-nav__toggle" type="button">Меню</button>
+        <a class="main-nav__toggle" href="#">Меню</a>
         <ul class="main-nav__list">
           <li class="main-nav__item">
             <a class="main-nav__link">Главная</a>
@@ -101,12 +101,12 @@
         <img src="https://via.placeholder.com/150x150" width="150" height="150" alt="Mishka">
       </a>
       <div class="social page-footer__social">
-        <a class="social-item social-item--inatagram" href="#"></a>
-        <a class="social-item social-item--facebook" href="#"></a>
-        <a class="social-item social-item--twitter" href="#"></a>
+        <a class="social-item social-item--inatagram" href="#">инстаграм</a>
+        <a class="social-item social-item--facebook" href="#">фейсбук</a>
+        <a class="social-item social-item--twitter" href="#">твиттер</a>
       </div>
       <a class="copyright" href="">Разработано
-        <svg class="html-academy-ico"></svg>
+        <svg class="html-academy-ico">Htmlacademy</svg>
       </a>
     </div>
   </footer>
