--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
       </a>
       <nav class="main-nav">
         <div class="main-nav__wrapper">
-          <button class="main-nav__toggle" type="button">Меню</button>
+          <a class="main-nav__toggle" href="#">Меню</a>
           <ul class="main-nav__list">
             <li class="main-nav__item main-nav__item--active">
               <a class="main-nav__link">Главная</a>
@@ -69,7 +69,7 @@
           </table>
           <img class="product-promo__img" src="https://via.placeholder.com/150x150" alt="Фото товара">
           <div class="product-promo__price"> Цена: 990 руб.</div>
-          <button class="btn" type="button">Заказать</button>
+          <a class="btn" href="#">Заказать</a>
         </div>
       </section>
       <section class="advantages">
@@ -125,7 +125,7 @@
           <div class="contacts__map">
             <iframe src="#" frameborder="0"></iframe>
           </div>
-          <button class="btn" type="button">Напишите нам</button>
+          <a class="btn">Напишите нам</a>
         </div>
       </section>
     </div>
@@ -135,12 +135,12 @@
           <img src="https://via.placeholder.com/150x150" width="150" height="150" alt="Mishka">
         </a>
         <div class="social page-footer__social">
-          <a class="social-item social-item--inatagram" href="#"></a>
-          <a class="social-item social-item--facebook" href="#"></a>
-          <a class="social-item social-item--twitter" href="#"></a>
+          <a class="social-item social-item--inatagram" href="#">инстаграм</a>
+          <a class="social-item social-item--facebook" href="#">фейсбук</a>
+          <a class="social-item social-item--twitter" href="#">твиттер</a>
         </div>
         <a class="copyright" href="">Разработано
-          <svg class="html-academy-ico"></svg>
+          <svg class="html-academy-ico">Htmlacademy</svg>
         </a>
       </div>
     </footer>
